tests/ui/traits/const-traits/assoc-type-const-bound-usage-fail.next.stderr
error[E0277]: the trait bound `<T as Trait>::Assoc: ~const Trait` is not satisfied
  --> $DIR/assoc-type-const-bound-usage-fail.rs:17:5
   |
LL |     T::Assoc::func();
   |     ^^^^^^^^

error[E0277]: the trait bound `<T as Trait>::Assoc: ~const Trait` is not satisfied
  --> $DIR/assoc-type-const-bound-usage-fail.rs:20:5
   |
LL |     <T as Trait>::Assoc::func();
   |     ^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
